Fix: course list content overflowing on IE

--- a/src/scss/modules/course-list.scss
+++ b/src/scss/modules/course-list.scss
@@ -58,6 +58,7 @@
             display: flex;
             flex-direction: column;
             padding: 1rem;
+            flex-basis: 100%;
         }
 
         &__item {
